--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css">
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
     <header class="header">
@@ -25,41 +26,52 @@
           </button>
         </div>
     </header>
-    <!--
-    <section>
-      <div>
-        <h1>Capture and Share the World's Moments</h1>
-      </div>
-
-      <div>
-        <p>Instagram is a fast, beautiful and fun way to share your life with
-          friends and family.</p>
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see
-          the world.</p>
-        <p>Oh yeah, did we mention it's free?</p>
-      </div>
-
-      <div>
-        
-            <a href="#"><img src="./images/badge-iphone.png" alt=""></a>
-            <a href="#"><img src="./images/badge-android.png" alt=""></a>
-      </div>
-    </section>
+    <section class="section1" id="background" >
+      <div id="imgphone"><img src="./images/phones.png" alt=""/> </div>
+        <div class="height">
+          <header>
+            <div id="instagramLogo"><img src="./images/brand.png" alt="instagramlogo"/>
+            </div>
+            <div class="button" id="homelogo"><img src="./images/home.png" alt="logoHOME" id="home"/>
+              Log In
+            </div>
+          </header>
+          <div class="text">
+            <h1>Capture and Share <br> the World's Moments</h1>
+            <p>
+              Instagram is a <strong> fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+              friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram,
+              it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p> 
+            <P>
+              Oh yeah, did we mention it's free?
+            </P>            
+          </div>
+          <div id="badge">
+            <img src="./images/badge-iphone.png" alt=""/>
+            <img src="./images/badge-android.png" alt=""/>
+          </div>
+        </div>
+      </section>
   
-    <footer class="footer">
-      <ul>
-        <li>About Us</li>
-        <li>Support</li>
-        <li>Blog</li>
-        <li>Press</li> 
-        <li>API</li> 
-        <li>Jobs</li> 
-        <li>Privacy</li> 
-        <li>Terms</li>
-      </ul>
-           &copy; 2014 Instagram
-    </footer>
-  -->
+  
+      <footer>
+        <div class="links">
+          <ul>
+            <li><a href="">ABOUT US</a></li>
+            <li><a href="">SUPORT</a></li>
+            <li><a href="">BLOG</a></li>
+            <li><a href="">PRESS</a></li>
+            <li><a href="">API</a></li>
+            <li><a href="">JOBS</a></li>
+            <li><a href="">PRIVACY</a></li>
+            <li><a href="">TERMS</a></li>
+            <li><a href="" id="copy">©2014 Instagram</a></li>
+          </ul>
+        </div>
+        </footer>
   </body>
 </html>
