--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="div-size blue-bg">
+    </div>
+    <div class="flex-main minus-margin">
+      <div>
+        <img class="phones" src="/images/phones.png" alt="">
+      </div>
+      <div class="section-width">
+        <div class="flex-row-left">
+          <img class="logo" src="/images/brand.png" alt="Instagram Logo">
+          <button class="blue-btn grey button-flex"><img src="/images/home.png" alt="">Log In</button>
+        </div>
+          <div class="white-section">
+            <div>
+              <h2 class="title-width">Capture and Share the World's Moments</h2>
+              <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+            </div>
+            <div class="black-btns">
+              <img class="black-btn-left" src="/images/badge-iphone.png" alt="">
+              <img class="black-btn-right" src="/images/badge-android.png" alt="">
+            </div>
+          </div>
+      </div>
+    </div>
+    <footer class="margin-tb">
+      <ul class="flex-row">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li> Press</li>
+        <li>API</li>
+        <li> Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="grey">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  
   </body>
 </html>
