--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="/lab-css-instagram-clone/styles/style.css">
     <!-- don't forget to link your styles -->
-  </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="body">
+      <section>
+        <div class="logo">
+           <img class="logo-img" src="/lab-css-instagram-clone/images/brand.png" alt="brand">
+           <button class="log-in-button" > 
+             <a class="log-in" href="#login"><img src="/lab-css-instagram-clone/images/home.png" alt="button"> Log in </a>
+            </button>
+        </div>
+        <div class="div-article">
+         <article>
+          <h2>Capture and Share <br> the World's Moments</h2>
+          <p> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family. </p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p> Oh yeah, did we mention it's free?</p>
+         </article>
+        </div>
+          <div class= "buttons">
+            <button class="buttons-button">
+              <img src="/lab-css-instagram-clone/images/badge-iphone.png" alt="iphone"> 
+            </button>
+            <button class="buttons-button">
+              <img src="/lab-css-instagram-clone/images/badge-android.png" alt="android">
+            </button>
+        </div>
+      </section>
+      <img src="/lab-css-instagram-clone/images/phones.png" alt="Phones">
+    </section>
   </body>
+  <footer>
+    <ul>
+      <li><a class="footer-item" href="#about">About Us</a></li>
+      <li><a class="footer-item" href="#support">Support</a></li>
+      <li><a class="footer-item" href="#blog">Blog</a></li>
+      <li><a class="footer-item" href="#press">Press</a></li>
+      <li><a class="footer-item" href="#api">API</a></li>
+      <li><a class="footer-item" href="#jobs">Jobs</a></li>
+      <li><a class="footer-item" href="#privacy">Privacy Terms</a></li>
+      2014 Instagram
+    </ul>
+  </footer>
 </html>
