--- a/index.html
+++ b/index.html
@@ -4,13 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="styles\style.css"
+    />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header class="header">
+      <img src="images\brand.png" alt="Instagram">
+      <button class="home"><img src="images\home.png" alt="icone de uma casa"> <b>Log in</b></button>
+    </header>
+    <section class="central"><img src="images\frame.png" alt="caixa branca alinhada ao centro">
+      <div class="titulo">
+        Capture and Share
+      </div>
+      <div class="titulozinho">
+        the World's Moments
+      </div>
+      <div class="conteudo">
+        <p>
+        Instagram is a <strong>fast</strong>, <strong>beautiful</strong>  and <strong>fun</strong> way to share your life with
+    friends and family. <br><br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br><br>
+        Oh yeah, did we mention it's free?
+        </p>
+        <div class="appApple"><img src="images\badge-iphone.png" alt="Download on the App Store"></div>
+        <div class="appAndroid"><img src="images\badge-android.png" alt="Get it on Google Play"></div>
+      </div>
+    </section>
+    <section class="celular">
+      <img src="images\phones.png" alt="Imagem de celular>">
+    </section>
+    <footer class="footer">
+      <ul class="nav-bar-ul">
+        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">SUPPORT</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">PRESS</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">JOBS</a></li>
+        <li><a href="#">PRIVACY</a></li>
+        <li><a href="#">TERMS</a></li>
+        <li>&copy; 2014 INSTAGRAM</li>
+      </ul>
+    </footer>    
   </body>
 </html>
