--- a/index.html
+++ b/index.html
@@ -4,13 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css" type="text/css" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="conteiner1">
+      
+      <img src="./images/phones.png" alt="Dois Smartphones"/>
+      
+      <div class="conteiner2">
+        <div class="topo">
+        <img src="./images/brand.png" alt="Logo do Instagram" />
+        <button type="button">
+          <img src="./images/home.png" alt="Ícone de casa" />
+          Log in
+        </button>
+        </div>
+
+        <section class="background">
+
+        <h1> Capture and Share the World's Moments</h1>
+        <p>
+          Instagram is a <strong> fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+          friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free? 
+        </p>
+        <div>
+          <img src="./images/badge-iphone.png" alt="App Store Logo" />
+          <img src="./images/badge-android.png" alt="Google Play Logo" />
+        </div>
+      </div>
+
+      </section>
+    </section>
   </body>
+  <footer>
+    <ul>
+      <li><a href="/About Us">About Us</a></li>
+      <li><a href="/Support">Support</a></li>
+      <li><a href="/Blog">Blog</a></li>
+      <li><a href="/Press">Press</a></li>
+      <li><a href="/API">API</a></li>
+      <li><a href="/Jobs">Jobs</a></li>
+      <li><a href="/Privacy">Privacy</a></li>
+      <li><a href="/Terms">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </html>
