--- a/index.html
+++ b/index.html
@@ -5,12 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="blue-background"></div>
+    <main class="content">
+      <section class="phone-img-column">
+        <img src="./images/phones.png" alt="" />
+      </section>
+      <section class="info-column">
+        <div class="login-row">
+          <img src="./images/brand.png" alt="" />
+          <button>
+            <img src="./images/home.png" alt="" />
+            <p>Log in</p>
+          </button>
+        </div>
+        <div class="text-row">
+          <h1>Capture and Share <br />the World's Moments</h1>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beatiful</strong> and
+            <strong>fun</strong> way to share ytour life with friends and
+            family.<br />
+            <br />
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram - it's that easy. You can even sharo to
+            Facebook, Twitter and more. It's a new way to see the world. <br />
+            <br />
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div class="download-img">
+          <img src="./images/badge-iphone.png" alt="" />
+          <img src="./images/badge-android.png" alt="" />
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div>
+        <nav>
+          <ul class="list-menu">
+            <li>
+              <a href=""><strong>ABOUT US</strong></a>
+            </li>
+            <li>
+              <a href="#"><strong>SUPPORT</strong></a>
+            </li>
+            <li>
+              <a href="#"><strong>BLOG</strong></a>
+            </li>
+            <li>
+              <a href="#"><strong>PRESS</strong></a>
+            </li>
+            <li>
+              <a href="#"><strong>API</strong></a>
+            </li>
+            <li>
+              <a href="#"><strong>JOBS</strong></a>
+            </li>
+            <li>
+              <a href="#"><strong>PRIVACY</strong></a>
+            </li>
+            <li>
+              <a href="#"><strong>TERMS</strong></a>
+            </li>
+            <p></p>
+          </ul>
+        </nav>
+        <p>2014 INSTAGRAM</p>
+      </div>
+    </footer>
   </body>
 </html>
