--- a/index.html
+++ b/index.html
@@ -5,12 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" type="text/css" href="/styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="background">
+      <main class="content">
+        <img class="phone" src="/images/phones.png" alt="Cellphone images" />
+        <div class="container">
+          <div class="title">
+            <img src="/images/brand.png" alt="Instagram logo" />
+            <button class="login-btn">
+              <img src="/images/home.png" alt="Home icon" /> Log in
+            </button>
+          </div>
+          <div class="text">
+            <h1>
+              Capture and Share <br />
+              the World's Moments
+            </h1>
+            <p>
+              Instagram is a <strong>fast</strong>,
+              <strong>beautiful</strong> and <strong>fun</strong> way to share
+              your life with friends and family. <br /><br />
+
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+              <br /><br />
+              Oh yeah, did wemention it's free?
+            </p>
+            <div class="buttons">
+              <button class="iphone">
+                <img src="/images/badge-iphone.png" />
+              </button>
+              <button class="android">
+                <img src="/images/badge-android.png" />
+              </button>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+    <footer class="footer">
+      <ul class="footer-menu">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+      &copy; 2014 Instagram
+    </footer>
   </body>
 </html>
