--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section>
+      <img src="images/phones.png">
+
+      <div>
+        <div id=''>
+          <img src="images/brand.png">
+          
+          <button><img src="images/home.png">Log in</button>
+        </div>
+
+        <div id="background-text">
+          <h2>Capture and Share<br>the World's Moments</h2>
+
+          <p>Instagram is a fast, beautiful and fun way to share your life with 
+            friends and family.<br>
+
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+            <br>Oh yeah, did we mention it's free?</p> 
+            <img src="images/badge-iphone.png">
+            <img src="images/badge-android.png">
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <ur>
+        <a href="*">ABOUT US</a>
+        <a href="*">SUPPORT</a>
+        <a href="*">BLOG</a>
+        <a href="*">PRESS</a>
+        <a href="*">API</a>
+        <a href="*">J0BS</a>
+        <a href="*">PRIVACY</a>
+        <a href="*">TERMS</a>
+        <a href="*">©2014 INSTAGRAM</a>
+      </ur>
+    </footer>
   </body>
 </html>
