--- a/index.html
+++ b/index.html
@@ -5,12 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link href="./styles/style.css" rel="stylesheet" type="text/css"/>
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main class='container'>
+      <div class='mobile-img'>
+        <img src="./images/phones.png" alt="picture of mobile phones using instagram app"/>
+      </div>
+
+      <div class='login-menu-and-infos'>
+
+        <div class="login-and-logo">
+          <img src="./images/brand.png" alt="instagram logo"/>
+          <button class='button-login'>Log in</button>
+        </div>
+
+        <div class="text-infos">
+          <h3>Capture and Share the World's Moments</h3>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        
+        <div class="badges">
+          <img src="./images/badge-iphone.png" alt="badge apple store"/>
+          <img src="./images/badge-android.png" alt="badge google store"/>
+        </div>       
+          
+      </div>
+    </main>
+
+    <footer>
+      <ul>
+        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">SUPPORT</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">PRESS</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">JOBS</a></li>
+        <li><a href="#">PRIVACY</a></li>
+        <li><a href="#">TERMS</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+
   </body>
 </html>
