--- a/index.html
+++ b/index.html
@@ -3,14 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="container">
+      <img src="./images/phones.png" alt="Phones" class="phones" />
+      <div class="group">
+        <header>
+          <h1>
+            <img src="./images/brand.png" alt="Instagram" />
+          </h1>
+          <a href="#" class="login">Log in</a>
+        </header>
+        <main>
+          <p class="tagline">Capture and Share the World's Moments</p>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr, and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <ul class="stores">
+            <li><img src="./images/badge-iphone.png" alt="AppStore" /></li>
+            <li><img src="./images/badge-android.png" alt="Google Play" /></li>
+          </ul>
+        </main>
+      </div>
+    </div>
+    <footer>
+      <a href="javscript:void 0;">About Us</a>
+      <a href="javscript:void 0;">Support</a>
+      <a href="javscript:void 0;">Blog</a>
+      <a href="javscript:void 0;">Press</a>
+      <a href="javscript:void 0;">API</a>
+      <a href="javscript:void 0;">Jobs</a>
+      <a href="javscript:void 0;">Privacy</a>
+      <a href="javscript:void 0;">Terms</a>
+
+      &copy; 2014 Instagram
+    </footer>
   </body>
 </html>
