--- a/index.html
+++ b/index.html
@@ -3,14 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="main-section">
+      <img class="img-phone" src="./images/phones.png" alt="phones">
+      <div>
+        <header>
+          <img class="img-logo" src="./images/brand.png" alt="Instagram logo"/>
+          <button class="btn"><img class="img-home" src="./images/home.png">Log in</button> 
+        </header>
+        <section class="container">
+          <h1>Capture and Share the World's Moments</h1>
+          <div class="container-text">
+              <p>Instagram is a <b>fast</b>,<b>beautiful</b> and <b>fun</b> way to share your life with
+              friends and family.</p>
+              <article>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</article>
+              <p>Oh yeah, did we mention it's free?</p>
+              <div class="container-img">
+                <img src="./images/badge-iphone.png" alt="Download on the App Store"/>
+                <img src="./images/badge-android.png" alt="Get it on Google Play"/>  
+              </div>
+          </div>  
+          
+        </section>
+      </div>
+    </div>
+    <footer>
+      <ul class="footer">
+        <li class="footer-title">ABOUT US</li>
+        <li class="footer-title">SUPPORT</li>
+        <li class="footer-title">BLOG</li>
+        <li class="footer-title">PRESS</li>
+        <li class="footer-title">API</li>
+        <li class="footer-title">JOBS</li>
+        <li class="footer-title">PRIVACY</li>
+        <li class="footer-title">TERMS</li>
+        <li class="footer-insta">&copy; 2014 INSTAGRAM</li>
+      </ul>
+    </footer>  
   </body>
 </html>
