--- a/index.html
+++ b/index.html
@@ -4,13 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <div class="container">
+        <img src="images/phones.png" alt="Image of two mobile phones" />
+        <div class="container-logo-text">
+          <div class="logo">
+            <img src="images/brand.png" alt="" />
+            <a href=""><img src="images/home.png" alt="" />Log In</a>
+          </div>
+
+          <div class="text-home">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>
+              Instagram is a <span class="bold-text">fast, beautiful</span> and
+              <span class="bold-text">fun</span> way to share your life with
+              friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+
+          <div class="container-downloads">
+            <img src="./images/badge-iphone.png" alt="Download on Iphone" />
+            <img src="./images/badge-android.png" alt="Download on Iphone" />
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <nav class="footer-nav">
+        <ul>
+          <a href="#"><li>About Us</li></a>
+          <a href="#"><li>Support</li></a>
+          <a href="#"><li>Blog</li></a>
+          <a href="#"><li>Press</li></a>
+          <a href="#"><li>API</li></a>
+          <a href="#"><li>Jobs</li></a>
+          <a href="#"><li>Privacy</li></a>
+          <a href="#"><li>Terms</li></a>
+          <li class="trademark">@2014 INSTAGRAM</li>
+        </ul>
+      </nav>
+    </footer>
+
+    <!--   
+     Download on the App Store Get it on Google Play About Us Support Blog Press API
+    Jobs Privacy Terms &copy; 2014 Instagram -->
   </body>
 </html>
