--- a/index.html
+++ b/index.html
@@ -7,10 +7,45 @@
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section>
+      <img src="images/phones.png" alt="Iphone">
+
+    </section>
+
+    <section>
+      <img src="images/brand.png" alt="Instagram">
+      <img src="images/home.png" alt="Home">
+      <a href="#">Log in</a>
+
+      <article>
+        <h1>Capture and Share the World´s Moments</h1>
+        <p> Instagram Capture and Share the World's Moments Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong>  way to share your life with
+          friends and family. <br> <br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br> <br>
+          Oh yeah, did we mention it's free? </p>
+      </article>
+
+      <img src="images/badge-iphone.png" alt="">ç
+      <img src="images/badge-android.png" alt="">
+
+    </section>
+
+    <footer>
+
+    </footer>
+    <ul>
+      <li> <a href="#" target="_blank">About us</a></li>
+      <li> <a href="#" target="_blank">Support</a></li>
+      <li> <a href="#" target="_blank">Blog</a></li>
+      <li> <a href="#" target="_blank">Press</a></li>
+      <li> <a href="#" target="_blank">API</a></li>
+      <li> <a href="#" target="_blank">Jobs</a></li>
+      <li> <a href="#" target="_blank">Privacy</a></li>
+      <li> <a href="#" target="_blank">Terms</a></li>
+
+      <li>2014 Instagram</li>
+
+    </ul>
+
   </body>
 </html>
