--- a/index.html
+++ b/index.html
@@ -4,13 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="box">
+      <div class="container">
+        <section class="movil">
+        <img src="./images/phones.png" alt="movil">
+        </section>
+        <section class="articulo">
+          <div>
+            <img src="./images/brand.png" alt="">
+          </div>
+          <h1>Capture and Share <br> World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <img src="./images/badge-android.png" alt="">
+          <img src="./images/badge-iphone.png" alt="">
+        </section>
+      </div>
+      <nav class="navigation">
+        <ul>
+          <li><a href="#"></a>about us</li>
+          <li><a href="#"></a>support</li>
+          <li><a href="#"></a>blog</li>
+          <li><a href="#"></a>press</li>
+          <li><a href="#"></a>api</li>
+          <li><a href="#"></a>jobs</li>
+          <li><a href="#"></a>privacy</li>
+          <li><a href="#"></a>terms</li>
+        </ul>
+      </nav>
+    </div>
   </body>
 </html>
