--- a/index.html
+++ b/index.html
@@ -4,13 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="flex-box">
+      <div class="phone-box">
+        <img src="./images/phones.png" alt="iphone and android phones">
+      </div>
+      <div class="info-box">
+        <div class="header-box">
+          <img class="logo" src="./images/brand.png" alt="Instagram Logo"> 
+          <a class="login" href="#"><img src="./images/home.png" alt="Login button">Log in</a>
+        </div>
+        <div class="header-content-box">
+          <h1 class="h1">Capture and Share <br> the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <a href="#"><img src="./images/badge-iphone.png" alt="Download on the app store"></a>
+        <a href="#"><img src="./images/badge-android.png" alt="Get it on Google Play"></a>
+        </div>
+      </div>
+    </div>
+    <div class="footer-box">
+      <ul class="footer">
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="terms">&copy; 2014 Instagram</li>
+      </ul>
+    </div>
   </body>
 </html>
