--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <li><a href="">Jobs</a></li>
         <li><a href="">Privacy</a></li>
         <li><a href="">Terms</a></li>
-        <li><a href="">&copy; 2014 Instagram</a></li>
+        <li><a href="" class="copyright">&copy; 2014 Instagram</a></li>
       </ul>
       </footer>
    
