--- a/index.html
+++ b/index.html
@@ -4,13 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="main-box">
+      <img src="images/phones.png" alt="Smartphones">
+      <article class="box-2">
+        <div class="box-3">
+          <img src="images/brand.png" alt="Logo de Instagram">
+          <div class="log-in">
+          <a href="#"> <img src="images/home.png" alt="Home">  Log in</a>
+          </div>
+          
+        </div>
+        <div class="caja-texto">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family.</p>
+            <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p> Oh yeah, did we mention it's free?</p>
+        <div class="box-4">
+          <img src="images/badge-iphone.png" alt="Descargar en App Store">
+          <img src="images/badge-android.png" alt="Descargar en Google Play">
+        </div>
+         </div>
+      </article>    
+    </section>
+
+    <footer class="box-5">
+      <a href="#">About us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <h6>&copy; 2014 Instagram</h6>
+    </footer>
   </body>
 </html>
