--- a/index.html
+++ b/index.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./styles/style.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <img class="blue" src="https://github.com/mdelgado333/lab-css-instagram-clone/blob/master/images/bgtile.png?raw=true">
+    <section>
+      
+          <img class="iphone" src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/images/phones.png?raw=true" alt="Dos teléfonos superpuestos">
+      <div class="bloque-derecho">
+          <div class="sup-right-box">
+              <img class="instagram-logo" src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/images/brand.png?raw=true" alt="logo instagram">
+              <a class="login" href="#"><img class="house"src="https://github.com/mdelgado333/lab-css-instagram-clone/blob/master/images/home.png?raw=true">     Log in</a>
+          </div>
+          <article>
+              <h1>Capture and Share <br>the World's Moments</h1>
+              <p>Instagram is a <strong>fast</strong>, <strong>easy</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - i'ts that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a neew way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+          </article>
+          <div class="badges">
+              <img class="app-store" src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/images/badge-iphone.png?raw=true" alt="Disponible en AppStore">
+              <img class="play-store"src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/images/badge-android.png?raw=true" alt="Disponible en Google Play">
+          </div>
+      </div>
+  </section>
+  <footer>
+      <ul>
+          <li><a href="#">ABOUT US</a></li>
+          <li><a href="#">SUPPORT</a></li>
+          <li><a href="#">BLOG</a></li>
+          <li><a href="#">PRESS</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">JOBS</a></li>
+          <li><a href="#">PRIVACY</a></li>
+          <li><a href="#">TERMS</a></li>
+          <li>©2014 INSTAGRAM</li>
+      </ul>
+  </footer>
   </body>
 </html>
