--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+  <div class="flex-container box">
+    <section>
+        <img src="images/phones.png">
+    </section>
+
+    <section>
+      <div class="logoboton flex-container">
+        <img src="images/brand.png">
+        <a class="button" href="https://www.instagram.com/?hl=es" target="_blank"><img src="images/home.png">Log in</a>
+      </div>
+       <div class="caja">
+        <h1>Capture and Share the World's Moments</h1>
+       <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+        friends and family.</p>
+       <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+       <p>Oh yeah, did we mention it's free?</p>
+        <div class="photo">
+          <img src="images/badge-iphone.png">
+          <img src="images/badge-android.png">
+        </div>
+      </div>
+    </section>
+  </div>
+
+<footer class="botones">
+  <ul>
+    <li>ABOUT US</li>
+    <li>SUPPORT</li>
+    <li>BLOG</li>
+    <li>PRESS</li>
+    <li>API</li>
+    <li>JOBS</li>
+    <li>PRIVACY</li>
+    <li>TERMS</li>
+    <li class="insta">&copy; 2004 INSTAGRAM</li> 
+   </ul>
+</footer>
+ 
+
+
   </body>
 </html>
