--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
 
   <body>
+    <div>
+      <img class="fondo" src="images/bgtile.png" alt="fondo">
+    </div> 
     <section>
       <div class="left">
         <img src="images/phones.png" alt="Phones image">
@@ -21,10 +24,8 @@
 
         <div class="text">
           <h1>Capture and Share the World's Moments</h1>
-          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
-          friends and family.</p>
-          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Instagram is a <strong> fast </strong>, <strong> beautiful </strong> and <strong> fun </strong> way to share your life with
+          friends and family.</p><p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
         </div>
         <div clas="imagenes">
