--- a/index.html
+++ b/index.html
@@ -4,13 +4,67 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
+
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  
+<section class="flex-container">
+
+  <section class="iphone">
+    <img src="./images/phones.png" alt="Móviles con instagram abierto">
+  </section>
+
+
+  <section class="section">
+    <article class="instagram-box">
+      <img src="./images/brand.png" alt="Logo instagram">
+
+      <a href="*" class="button">
+        <img src="./images/home.png" alt="Casita">
+        <button>Log in</button>
+      </a>
+    </article>
+
+<br>
+
+    <article>
+      <div class="white-box">
+      <h1>Capture and Share the World's Moments </h1>
+<br>
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+        friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br>
+        <br>
+        Oh yeah, did we mention it's free?
+      </p>
+    </article>
+<br>
+    <article class="download">
+      <img src="./images/badge-iphone.png" alt="Descargar en App Store"> 
+    
+
+      <img src="./images/badge-android.png" alt="Descargar en Google Play">
+    </div>
+    </article>
+  </section>
+</section>
+
+<footer class="footer">
+  <ul>
+    <li>ABOUT US</li>
+    <li>SUPPORT</li>
+    <li>BLOG</li>
+    <li>PRESS</li>
+    <li>API</li>
+    <li>JOBS</li>
+    <li>PRIVACY</li>
+    <li>TERMS</li>
+    <li class="insta">&copy; 2014 INSTAGRAM</li>
+  </ul>
+</footer>
+  
   </body>
 </html>
