--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
   <body>
     <div class="box">
       <div class="container">
-        <section class="movil">
-        <img src="./images/phones.png" alt="movil">
+        <section class="movile">
+          <img src="./images/phones.png" alt="movil">
         </section>
-        <section class="articulo">
-          <div>
+        <section class="article">
+          <div class="boton_box">
             <img src="./images/brand.png" alt="">
+            <a href="#" class="boton"><img src="./images/home.png" alt="casa_icono">Log in</a>
           </div>
-          <h1>Capture and Share <br> World's Moments</h1>
-          <p>Instagram is a fast, beautiful and fun way to share your life with
-          friends and family.</p>
-          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-          <p>Oh yeah, did we mention it's free?</p>
-          <img src="./images/badge-android.png" alt="">
-          <img src="./images/badge-iphone.png" alt="">
+          <div class="text">
+            <h1>Capture and Share <br> World's Moments</h1>
+            <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <img src="./images/badge-android.png" alt="android_image">
+            <img src="./images/badge-iphone.png" alt="iphone_image">
+        </div>
         </section>
       </div>
       <nav class="navigation">
