--- a/index.html
+++ b/index.html
@@ -4,13 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="flex-container">
+      <section class="section-first">
+        <img src="images/phones.png" alt="phones img">
+      </section>
+      <section class="section-second">
+        <div class="title">
+          <img src="images/brand.png" alt="brand img">
+          <a class="log-in" href="#"> <img src="images/home.png" alt="home img"> Log in</a>
+        </div>
+        <article>
+          <h2>Capture and Share <br> the World's Moments</h2>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </article>
+        <div class="black-images">
+          <img src="images/badge-iphone.png" alt="">
+          <img src="images/badge-android.png" alt="">
+        </div>
+      </section>
+    </div>
+    <footer class="footer">
+      <ul class="links-footer">
+        <li><a href="#about us">ABOUT US</a></li>
+        <li><a href="#support">SUPPORT</a></li>
+        <li><a href="#blog">BLOG</a></li>
+        <li><a href="#press">PRESS</a></li>
+        <li><a href="#api">API</a></li>
+        <li><a href="#jobs">JOBS</a></li>
+        <li><a href="#privacy">PRIVACY</a></li>
+        <li><a href="#terms">TERMS</a></li>
+        <li class="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
