--- a/index.html
+++ b/index.html
@@ -1,16 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" type="text/css" href="./styles/style.css">
+</head>
+
+<body>
+  <header>
+    <img src="./images/bgtile.png" alt="fondo">
+  </header>
+
+  <main>
+
+    <!-- 1ª seccion -->
+    <section class="iphones">
+      <img src="./images/phones.png" alt="iphones">
+    </section>
+
+
+    <!-- 2ª seccion -->
+    <section class="maintwo">
+
+
+      <!-- 1er article -->
+      <article class="instagram-brand">
+        <img src="./images/brand.png" alt="instagram-brand">
+
+        <a href="#"><img src="./images/home.png" alt="home">log in</a>
+      </article>
+
+
+      <!-- 2º article -->
+      <article class="text">
+        <h1>Instagram Capture and Share the World's Moments</h1>
+
+        <p>Instagram is a <strong>fast</strong>,<strong>beautiful</strong> and <strong>fun</strong> way to share your
+          life with friends and family.</p>
+
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.</p>
+
+        <p> Oh yeah, did we mention it's free?</p>
+
+      </article>
+
+
+
+      <!-- 3er article -->
+      <article class="APP-Google">
+
+
+        <a href="#"><img src="./images/badge-iphone.png" alt="APP store"></a>
+        <a href="#"><img src="./images/badge-iphone.png" alt="Google play"></a>
+
+
+
+      </article>
+
+
+    </section>
+  </main>
+
+
+  <footer>
+
+
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#"> Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>
+        <p>&copy; 2014 Instagram</p>
+      </li>
+    </ul>
+
+
+  </footer>
+
+</body>
+
 </html>
