--- a/index.html
+++ b/index.html
@@ -5,12 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
+    <section class="phone-image"> 
+      <img src="./images/phones.png" alt="picture of iphones">
+    </section>
+    <section class="frame-box">
+      <section class="nav-bar-section">
+        <img src="./images/brand.png" alt="Instagram brand logo">
+        <section class="login-button"> 
+          <form>
+          <img src="./images/home.png" alt="home icon for login button">
+          </form>
+        </section>
+      </section>
+       Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+      friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play 
+    </section>
+    <section> 
+      About Us Support Blog Press API
     Jobs Privacy Terms &copy; 2014 Instagram
+    </section>
   </body>
 </html>
