finished HTML, need to style the CSS

--- a/index.html
+++ b/index.html
@@ -8,26 +8,54 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <section class="phone-image"> 
-      <img src="./images/phones.png" alt="picture of iphones">
-    </section>
-    <section class="frame-box">
-      <section class="nav-bar-section">
-        <img src="./images/brand.png" alt="Instagram brand logo">
-        <section class="login-button"> 
-          <form>
-          <img src="./images/home.png" alt="home icon for login button">
-          </form>
-        </section>
+    <section class="page">
+      <section class="phone-image"> 
+          <img src="./images/phones.png" alt="picture of iphones">
       </section>
-       Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-      friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-      Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play 
-    </section>
-    <section> 
-      About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-    </section>
+      <section class="frame-box">
+        <section class="nav-bar-section">
+          <section>
+              <img src="./images/brand.png" alt="Instagram brand logo">
+              <form>
+                <div class="btn btn_red"><span class="icon"></span><a href="#">Login</a><span></span></div>
+              </form>
+          </section>
+          <section class="white-frame-box">
+            <article>
+              
+            </article>
+            <h2>
+              Capture and Share<br> the World's Moments 
+            </h2>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and 
+          <strong>fun</strong> way to share your life with
+          friends and family. <br>Take a picture or video, 
+          choose a filter to transform its look and feel, 
+          then post to Instagram &mdash; it's that easy. 
+          You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
+          Oh yeah, did we mention it's free? 
+          <section>
+            <section class="badge-section">
+              <img src="./images/badge-iphone.png" alt="Iphone App Store badge">
+            </section>
+            <section>
+              <img src="./images/badge-android.png" alt="Google Play Store badge">
+            </section>
+          </section>
+          </section>
+        </section>  
+      </section>
+      </section>
+        <footer> 
+          <a href="#">About Us</a>
+          <a href="#">Support</a>
+          <a href="#">Blog</a>
+          <a href="#">Press</a>
+          <a href="#">API</a>
+          <a href="#">Jobs</a>
+          <a href="#">Privacy</a> 
+          <a href="#">Terms</a>
+          &copy; 2014 Instagram
+        </footer>
   </body>
 </html>
