added the rest of the styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <script src="https://kit.fontawesome.com/267362332c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
@@ -14,48 +15,58 @@
       </section>
       <section class="frame-box">
         <section class="nav-bar-section">
-          <section>
+          <section class="instagram-letters">
               <img src="./images/brand.png" alt="Instagram brand logo">
-              <form>
-                <div class="btn btn_red"><span class="icon"></span><a href="#">Login</a><span></span></div>
-              </form>
           </section>
+        </section>
+        <div class="login">
+          <img src="./images/home.png" alt="home button">
+          <p>Login</p>
+        </div>
           <section class="white-frame-box">
+            <section class="box-content">
             <article>
               
             </article>
             <h2>
               Capture and Share<br> the World's Moments 
             </h2>
+            <p>
           Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and 
           <strong>fun</strong> way to share your life with
-          friends and family. <br>Take a picture or video, 
+          friends and family. 
+          <br>
+          <br>Take a picture or video, 
           choose a filter to transform its look and feel, 
           then post to Instagram &mdash; it's that easy. 
           You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
+          <br>
           Oh yeah, did we mention it's free? 
-          <section>
-            <section class="badge-section">
+            </p>
+            </section>
+          <section class="badge-section">
+            <section class="app-store">
               <img src="./images/badge-iphone.png" alt="Iphone App Store badge">
             </section>
-            <section>
+            <section class="app-store">
               <img src="./images/badge-android.png" alt="Google Play Store badge">
             </section>
           </section>
-          </section>
-        </section>  
+          </section>  
       </section>
       </section>
-        <footer> 
-          <a href="#">About Us</a>
-          <a href="#">Support</a>
-          <a href="#">Blog</a>
-          <a href="#">Press</a>
-          <a href="#">API</a>
-          <a href="#">Jobs</a>
-          <a href="#">Privacy</a> 
-          <a href="#">Terms</a>
+      <section class="footer-section">
+
+          <a class="links" href="#">About Us</a>
+          <a class="links" href="#">Support</a>
+          <a class="links" href="#">Blog</a>
+          <a class="links" href="#">Press</a>
+          <a class="links" href="#">API</a>
+          <a class="links" href="#">Jobs</a>
+          <a class="links" href="#">Privacy</a> 
+          <a class="links" href="#">Terms</a>
           &copy; 2014 Instagram
-        </footer>
+
+      </section>
   </body>
 </html>
