--- a/index.html
+++ b/index.html
@@ -1,16 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fake instagram</title>
+    <link rel="stylesheet" href="styles/style.css">
+</head>
+<body>
+  <section class="box">
+      <div class="screenshot">
+          <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/phones.png" alt="screenshot">
+
+      </div>
+      <div class="left">
+          <div class="instagram">
+              <img class="pic" src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/brand.png" alt="">
+
+
+
+              <button type="button"> <img class= "ing" src="C:\Users\Eduardo B\Desktop\lab-ironhack\lab-css-instagram-clone\images\home.png" height ="80" width="100" />Log in</button>
+
+
+          </div>
+
+
+          <div class="description">
+              <h1>Capture and Share the world's Moments</h1>
+              <p>instagram is a fast, beautiful and fun way to share your life with friends and family</p>
+              <p>Take a picture or a videp, choose a filter to transform its look and feel, then post to instagram-it's that easy.You can even share to facebook twiter,tumblr and more. it's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+              <div>
+                  <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/badge-iphone.png" alt="">
+                  <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/badge-android.png" alt="">
+              </div>
+          </div>
+      </div>
+  </section>
+  <footer>
+      <ul>
+          <il>ABOUT US</il>
+          <il>
+              SUPPORT
+          </il>
+          <il>
+              BLOG
+          </il>
+          <il>
+              PRESS
+          </il>
+          <il>
+              API
+          </il>
+          <il>
+              JOBS
+          </il>
+          <il>
+              PRIVACY
+          </il>
+          <il>
+              TERMS
+          </il>
+          <p>2014 INSTAGRAM</p>
+      </ul>
+  </footer>
+
+
+</body>
 </html>
